fix: correct bin paths

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kitajs/ts-html-plugin",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Typescript LSP extension to catch XSS vulnerabilities.",
   "bugs": "https://github.com/kitajs/ts-html-plugin/issues",
   "repository": "https://github.com/kitajs/ts-html-plugin",
@@ -11,8 +11,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "ts-html-plugin": "dist/bin.js",
-    "xss-scan": "dist/bin.js"
+    "ts-html-plugin": "./dist/cli.js",
+    "xss-scan": "./dist/cli.js"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
