--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.2.0",
   "description": "Typescript LSP extension to catch XSS vulnerabilities.",
   "bugs": "https://github.com/kitajs/ts-html-plugin/issues",
-  "repository": "https://github.com/kitajs/ts-html-plugin",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kitajs/ts-html-plugin.git"
+  },
   "funding": "https://github.com/kitajs/ts-html-plugin?sponsor=1",
   "license": "MIT",
   "author": "arthurfiorette <npm@arthur.place>",
@@ -11,8 +14,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "ts-html-plugin": "./dist/cli.js",
-    "xss-scan": "./dist/cli.js"
+    "ts-html-plugin": "dist/cli.js",
+    "xss-scan": "dist/cli.js"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -23,14 +26,14 @@
     "test": "tsc --noEmit"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.3.0",
     "tslib": "^2.6.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@arthurfiorette/prettier-config": "^1.0.9",
-    "@types/node": "^20.7.1",
-    "@types/yargs": "^17.0.26",
+    "@arthurfiorette/prettier-config": "^1.0.11",
+    "@types/node": "^20.8.3",
+    "@types/yargs": "^17.0.28",
     "prettier": "^3.0.3",
     "self": "file:."
   },
