--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dev": "tsc -p tsconfig.build.json --watch",
     "format": "prettier --write .",
     "prepack": "npm run build",
-    "test": "node --require @swc-node/register --test test/**/*.test.ts"
+    "test": "node --require @swc-node/register --test test/**/*.test.ts",
+    "test-procedure": "pnpm build && pnpm install && pnpm test"
   },
   "dependencies": {
     "chalk": "^4.1.2",
@@ -40,7 +41,7 @@
     "self": "file:."
   },
   "peerDependencies": {
-    "@kitajs/html": "^3.0.10",
+    "@kitajs/html": "^3.1.1",
     "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.7.5"
